working version with charts (pie as o now)

--- a/rsc/example.html
+++ b/rsc/example.html
@@ -9,15 +9,20 @@
     <script src="http://cdn.jsdelivr.net/sockjs/0.3.4/sockjs.min.js"></script>
 
     <script src='vertx-eventbus.js'></script>
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 
     <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="bootstrap.min.js"></script>
+    <script type="text/javascript" src="charts.js"></script>
+    <script type="text/javascript" src="d3.min.js"></script>
+    <script type="text/javascript" src="D3pie.js"></script>
+
 </head>
 
 <body>
 
-<h1>Messages</h1>
 
+<nav class="navbar navbar-inverse"></nav>
 <div id="messages"></div>
-
 </body>
 </html>
