--- a/rsc/example.html
+++ b/rsc/example.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="charts.js"></script>
     <script type="text/javascript" src="d3.min.js"></script>
     <script type="text/javascript" src="D3pie.js"></script>
+    <script type="text/javascript" src="gauge.js"></script>
 
 </head>
 
